--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,9 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
     --radius: 0.5rem;
+    --success: 150 50% 55%;
+    --warning: 33 100% 50.6%;
+    --info: 199 100% 40.8%;
   }
 
   .dark {
